--- a/css/about_us.section-our_team.css
+++ b/css/about_us.section-our_team.css
@@ -34,6 +34,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 .our_team-header-main_text{
     font-family: "Cormorant Infant", serif;
@@ -67,6 +68,7 @@
     
 }
 @media (max-width:780px) {
+    
     .our_team{
         padding: 90px 70px;
     }
@@ -81,6 +83,7 @@
       .our_team-left{
         max-width: 100%;
       }
+
 
 }
 .john_smith_accordion{
