finished the part "our partners"

--- a/css/about_us.section-our_partners.css
+++ b/css/about_us.section-our_partners.css
@@ -4,6 +4,7 @@
     text-align: center;
     align-items: center;
     background-image: url(/img/img_about_us_our_partners/background.png);
+    padding:100px 50px;
 }
 .our_partners_header-title {
     font-family: "Spectral", serif;
@@ -23,7 +24,7 @@
     color: #bc6e44
 }
 
-.our_partners-header-description {
+.our_partners-description {
     color: #837d71;
     font-family: "Spectral", serif;
     font-size: 19px;
@@ -33,7 +34,7 @@
     height: 100px;
     background-color: rgba(143,142,140,0.1);
     background-repeat: no-repeat;
-    margin: 25px;
+    margin: 20px;
     align-content: center;
 }
 .image{
@@ -46,4 +47,18 @@
 .row{
     display: flex;
     flex-direction: row;
+}
+@media (max-width:780px) {
+    .images_container{
+        display: flex;
+        
+    }
+    
+    .row{
+        display: flex;
+        flex-direction: column;
+    }
+}
+.high{
+    font-weight: 500;
 }
