--- a/css/about_us.css
+++ b/css/about_us.css
@@ -6,3 +6,4 @@
 @import url(about_us.section-our_partners.css);
 @import url(about_us.section-our_team.css);
 @import url(about_us.section-our_winery.css);
+@import url(about_us.section-our_story.css);
