--- a/css/global.css
+++ b/css/global.css
@@ -3,15 +3,6 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,700&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
-header {
-  background-image: linear-gradient(rgba(42, 40, 36, 0.85), rgba(42, 40, 36, 0.6)), url('../img/header.menu/header-cover.jpg');
-  background-size: cover;
-  background-position: center;
-  min-height: 1100px;
-  max-width: 100%;
-  color: var(--text-color);
-}
-
 *, p {
   box-sizing: border-box;
   margin: 0;
@@ -27,6 +18,7 @@ header {
     --text-button-color:#fff;
     --background-color: #fcfaf6;
     --description-text-color: #2a2824;
+    --background-color-header-address: black;
     font-family: "Spectral", serif;
 }
 
