--- a/css/common.header-address.partial.css
+++ b/css/common.header-address.partial.css
@@ -1,5 +1,5 @@
 .address {
-    display: flex;
+    display: none;
     justify-content: space-between;
     width: 100%;
     background-color: var(--background-color-header-address);
@@ -35,8 +35,8 @@
     padding-right: 3px;
 }
 
-@media (max-width: 900px) {
+@media (min-width: 901px) {
     .address {
-        display: none;
+        display: flex;
     }
 }
