changed card items

--- a/css/index.header-welcomepage.partial.css
+++ b/css/index.header-welcomepage.partial.css
@@ -36,21 +36,29 @@
     text-align: left;
     font-size: 20px;
 
+
     .header-card__item-link:hover {
         text-decoration: underline;
         text-decoration-thickness: 2.5px;
+        color: var(--text-button-color);
+    }
 
-        .header-card__item-child:after {
-            content: "→";
-            text-decoration: none;
-        }
+    .header-card__link-wrapper {
+        display: flex;
+        align-items: center;
+        width: 100%;
+    }
+
+    .header-card__item-right-arrow {
+        color: var(--text-button-color);
     }
 }
 
 .header-card__item-link {
-    color: white;
+    color: var(--text-button-color);
     font-size: 26px;
     text-decoration: none;
+    margin-right: 5px;
 }
 
 .header-card__item-text {
