Add some styles for footer

--- a/css/index.css
+++ b/css/index.css
@@ -11,3 +11,4 @@
 @import url(index.section-about-us.css);
 @import url(index.section-gourmand-choice.css);
 @import url(index.section-our-vineyards.partial.css);
+@import url(common.footer.partial.css);
