--- a/css/index.section-benefits.css
+++ b/css/index.section-benefits.css
@@ -1,6 +1,3 @@
-.benefits {
-  overflow: hidden;
-}
 .benefits__container {
  display: flex;
  flex-direction: column;
@@ -99,6 +96,9 @@
   }
   .benefits__description {
     font-size: 52px;
+  }
+  .vineyard-tours {
+    flex-direction: row;
   }
   .vineyard-tours__description {
     font-size: 36px;
