--- a/css/contact_us.section-distribution.css
+++ b/css/contact_us.section-distribution.css
@@ -12,6 +12,7 @@
   font-size: 12px;
   letter-spacing: 2.4px;
   color: var(--title-color);
+  
 }
 .distribution__subtitle {
   font-family: "Cormorant Infant", serif;
@@ -23,6 +24,8 @@
   color: var(--text-color);
 }
 .distribution__item {
+  display: flex;
+  flex-direction: column;
   height: 179px;
   padding: 30px 0;
   margin: 30px 24px;
@@ -39,7 +42,7 @@
   color: var(--title-color);
   font-weight: 300;
   font-style: italic;
-  margin-bottom: 20px;
+  margin: 15px 0;
 }
 .distribution__item-contact,
   .distribution__item-email,
@@ -48,6 +51,19 @@
     font-weight: 300;
     color: var(--text-color);
   }
+  .distribution__item-email{
+    text-decoration: none;
+    padding-top: 10px;
+  }
+  .distribution__item-email:hover {
+    text-decoration: underline;
+}
+ .distribution__item-contact {
+    text-decoration: none;
+ }
+ .distribution__item-contact:hover {
+  text-decoration: underline;
+}
   .distribution__footer {
     margin-top: 50px;
     padding: 0 24px;
