--- a/css/common.header-menu.partial.css
+++ b/css/common.header-menu.partial.css
@@ -1,3 +1,5 @@
+/* TEST CODE WITHOUT REFACTORING */
+
 .header {
     background-image: linear-gradient(rgba(42, 40, 36, 0.85), rgba(42, 40, 36, 0.6)), url('../img/header.menu/header-cover.jpg');
     background-size: cover;
@@ -13,14 +15,19 @@
 }
 
 .header__main-logo {
-    width: 100px;
-    height: 100px;
+    display: none;
 }
 
 .header__menu {
-    display: flex;
-    justify-content: space-around;
+    display: none;
 }
+
+
+
+.navbar-toggler {
+    z-index: 1;
+    background-color: rgba(110, 82, 118, 0.5);
+  }
 
 .header__menu-list {
     display: flex;
@@ -61,9 +68,14 @@
     width: 100%;
 }
 
-@media (max-width: 900px) {
-    .header__menu-item {
+@media (min-width: 990px) {
+    .navbar {
         display: none;
+    }
+
+    .header__menu {
+        display: flex;
+        justify-content: space-around;
     }
 
     .header__main-logo {
