--- a/css/common.footer.partial.css
+++ b/css/common.footer.partial.css
@@ -6,10 +6,26 @@
 .footer__logo {
   width: 85px;
 }
-.footer__contact-data a {
+.footer__text-description {
+  font-size: 14px;
+  margin-top: 30px;
+  margin-bottom: 5px;
+}
+
+.footer__contact-email,
+.footer__contact-phone {
+  margin-top: 10px;
+}
+
+.footer__contact-email a,
+.footer__contact-phone a {
   font-style: italic;
   color: var(--text-button-color);
   text-decoration: none;
+  font-size: 30px;
+}
+.footer__contact-phone a {
+  font-size: 24px;
 }
 .footer__nav ul {
   list-style-type: none;
@@ -20,11 +36,61 @@
   align-items: center;
   text-align: center;
 }
-.footer__contact-data,
+.footer__contact-email a:hover,
+.footer__contact-phone a:hover,
 .footer__nav a:hover {
   text-decoration: underline;
 }
 .footer__nav a {
   color: var(--footer-text-color);
   text-decoration: none;
+}
+
+.footer__general-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 80px 24px 0px 24px;
+}
+
+.footer__contact-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer__contact-text {
+  color: var(--title-color);
+  font-size: 12px;
+  font-weight: 700;
+  letter-spacing: 2.4px;
+  margin-top: 25px;
+}
+
+.footer__general-info:after {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 1px;
+  margin-top: 80px;
+  padding-top: 0;
+  background-color: var(--footer-text-color);
+}
+.footer__nav-bar ul {
+  padding: 0;
+}
+.footer__nav-bar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 30px 0;
+}
+.footer__nav-item a {
+  font-size: 17px;
+  letter-spacing: 1.7px;
+}
+.footer__nav-item li {
+  font-size: 17px;
+  letter-spacing: 1.7px;
+  margin: 10px 5px;
 }
