--- a/css/wineclub.css
+++ b/css/wineclub.css
@@ -2,3 +2,4 @@
 @import url(common.header-address.partial.css);
 @import url(common.header-menu.partial.css);
 @import url(wineclub.get-your-membership-right-now.partial.css);
+@import url(wineclub.header.css);
