--- a/css/global.css
+++ b/css/global.css
@@ -4,7 +4,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,700&family=Spectral:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
 header {
-  background-image: linear-gradient(rgba(42, 40, 36, 0.85), rgba(42, 40, 36, 0.6)), url('../img/header.menu/header-cover.jpg');
+  background-image: linear-gradient(
+      rgba(42, 40, 36, 0.85),
+      rgba(42, 40, 36, 0.6)
+    ),
+    url("../img/header.menu/header-cover.jpg");
   background-size: cover;
   background-position: center;
   min-height: 1100px;
@@ -19,14 +23,16 @@ header {
 }
 
 :root {
-    scroll-behavior: smooth;
-    --title-color:#bc6e44;
-    --text-color:#837d71;
-    --data-color:#544E4C;
-    --text-button-color:#fff;
-    --background-color: #fcfaf6;
-    --description-text-color: #2a2824;
-    font-family: "Spectral", serif;
+  scroll-behavior: smooth;
+  --title-color: #bc6e44;
+  --text-color: #837d71;
+  --data-color: #544e4c;
+  --text-button-color: #fff;
+  --background-color: #fcfaf6;
+  --description-text-color: #2a2824;
+  --wineclub-header-text-color: #ffffff;
+  --wineclub-header-nav-text-color: #ffffffb0;
+  font-family: "Spectral", serif;
 }
 
 img {
@@ -38,5 +44,3 @@ img {
   max-width: 1200px;
   margin: auto;
 }
-
-
