--- a/css/index.css
+++ b/css/index.css
@@ -12,3 +12,4 @@
 @import url(index.section-gourmand-choice.css);
 @import url(index.section-our-vineyards.partial.css);
 @import url(common.footer.partial.css);
+@import url(collection.css);
