--- a/css/index.section-testimonials.partial.css
+++ b/css/index.section-testimonials.partial.css
@@ -10,14 +10,26 @@
   background-color: #bc6e44;
 }
 
+.container-testimonials {
+  background-image: url("../img/img_section_testimonials/background.png");
+  background-size: cover;
+}
+
+.testimonials-divider {
+  height: 1px;
+  width: 80%;
+  background-color: rgba(84, 78, 76, 0.09);
+  margin: 10px auto;
+}
+
 .testimonials {
   display: flex;
   flex-direction: column;
   align-items: center;
   text-align: center;
   padding: 50px 15px;
-  background-color: var(--background-color);
-  margin-top: 30px;
+  /* background-color: var(--background-color); */
+  padding-top: 30px;
 }
 
 .carousel-item {
@@ -75,8 +87,8 @@
 }
 
 .events {
-  background-color: var(--background-color);
-  margin-bottom: 30px;
+  /* background-color: var(--background-color); */
+  padding-bottom: 30px;
 }
 
 .events__row {
@@ -107,7 +119,7 @@
 @media (min-width: 576px) {
   .testimonials {
     padding: 20px 15px;
-    margin-top: 60px;
+    padding-top: 60px;
   }
 
   .carousel-item {
@@ -163,7 +175,7 @@
 @media (min-width: 768px) {
   .testimonials {
     padding: 20px 15px;
-    margin-top: 90px;
+    padding-top: 90px;
   }
 
   .carousel-item {
