--- a/css/index.header-welcomepage.partial.css
+++ b/css/index.header-welcomepage.partial.css
@@ -12,7 +12,7 @@
 }
 
 .welcome-text__main {
-    margin-top: 20%;
+    padding-top: 150px;
     display: block;
     font-family: "Spectral", serif;
     text-align: center;
