--- a/css/common.header-menu.partial.css
+++ b/css/common.header-menu.partial.css
@@ -83,7 +83,7 @@
     position: fixed;
     z-index: 5;
     display: block;
-    top: 12%;
+    top: 40px;
     right: 10%;
     width: 30px;
     height: 18px;
