Done section welcome in about us

--- a/css/about_us.section-create_wines.partial.css
+++ b/css/about_us.section-create_wines.partial.css
@@ -31,99 +31,93 @@
 }
 
 .create-wines-carousel {
-    display: flex;
-    position: relative;
-    width: 80%;
-    overflow: hidden;
+  display: flex;
+  position: relative;
+  width: 80%;
+  overflow: hidden;
 }
 
-.carousel-control {
-    background-color: transparent;
-    border: none;
-    font-size: 2em;
-    cursor: pointer;
-    z-index: 10;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    color: #333;
-}
-
-.carousel-control.left {
-    left: 10px;
-}
-
-.carousel-control.right {
-    right: 10px;
-}
-
-.carousel-wrapper {
-    display: flex;
-    transition: transform 0.5s ease-in-out;
-}
-
-.card {
-    min-width: 33.3333%;
-    margin: 10px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.accordion {
-    width: 100%;
-    padding: 10px;
-    text-align: center;
-}
-
-.accordion-button {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    background-color: #007BFF;
-    color: white;
-    cursor: pointer;
-    transition: background-color 0.3s;
-}
-
-.accordion-button:hover {
-    background-color: #0056b3;
-}
-
-.accordion-content {
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.3s ease-out;
-    background-color: #f8f9fa;
-    padding: 0 10px;
-}
-
-.accordion-content p {
-    margin: 10px 0;
-}
 .welcome {
+  width: 90%;
 }
+
+.welcome-content {
+  background-image: url(../img/about-us-welcome/bg.png);
+  background-size: cover;
+  padding: 40px;
+  color: #fff;
+}
+
 .welcome-title {
+  color: #fff;
 }
 .welcome-title__text {
+  font-size: 12px;
+  letter-spacing: 2px;
+  font-weight: 700;
 }
 .welcome-title__subtitle {
+  font-size: 30px;
+  font-family: "Cormorant Infant", serif;
 }
 .welcome-text {
+  display: flex;
+  flex-direction: column;
 }
+
+.welcome-text {
+}
+
 .welcome-text__text {
+  display: flex;
 }
-.welcome-text__subtext {
+
+.welcome-text__text::before {
+  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cpath d='M72,32V14H27v18c0,10.886,7.73,19.965,18,22.049V77l-18,9h18h9h18l-18-9V54.049C64.27,51.965,72,42.886,72,32z' fill='%23FFF'/%3E%3C/svg%3E");
+  margin-right: 8px; /* Отступ справа для разделения иконки и текста */
+  vertical-align: middle; /* Для вертикального выравнивания с текстом */
+  height: 20px;
+  width: 20px;
+  padding-top: 3px;
 }
+
+.welcome-subtext {
+  font-size: 19px;
+}
+
 .welcome-button {
+  /* padding-top: 20px; */
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  height: 100px;
+  background-color: none; /* Измените на нужный цвет фона */
 }
+
 .welcome-button__btn {
+  padding: 10px 20px;
+  font-size: 16px;
+  text-align: center;
+  color: #fff; /* Цвет текста */
+  background-color: transparent;
+  border: 2px solid #fff; /* Цвет рамки */
+  text-decoration: none; /* Убираем подчеркивание у ссылки */
+  font-family: sans-serif;
+  transition: background-color 0.3s, color 0.3s;
 }
+
+.welcome-button__btn:hover {
+  color: #000; /* Цвет текста при наведении, аналогичный фону */
+  background-color: #fff; /* Белый фон при наведении */
+  cursor: pointer;
+}
+
 .welcome-cards__row {
+  color: #a05a2c; /* Цвет текста при наведении */
+  background-color: #fff; /* Цвет фона кнопки при наведении */
+  cursor: pointer;
 }
+
 .welcome-cards__card {
 }
 .welcome-card {
@@ -133,4 +127,88 @@
 .welcome-card__text--title {
 }
 .welcome-card__text--subtitle {
+}
+
+@media (min-width: 768px) {
+  .create-wines-header__text {
+    font-size: 32px;
+  }
+
+  .create-wines-header__subtitle {
+    font-size: 16px;
+  }
+
+  .welcome-text {
+    flex-direction: column;
+  }
+
+  .card {
+    min-width: 25%;
+  }
+
+  .welcome-title__subtitle {
+    font-size: 30px;
+  }
+
+  .welcome-text__text::before {
+    height: 20px;
+    width: 20px;
+  }
+
+  .welcome-subtext {
+    font-size: 16px;
+  }
+
+  .welcome-button {
+    /* height: 150px; */
+  }
+
+  .welcome-button__btn {
+    padding: 15px 25px;
+    font-size: 18px;
+  }
+}
+
+@media (min-width: 968px) {
+  .create-wines-header__text {
+    font-size: 48px;
+  }
+
+  .create-wines-header__subtitle {
+    font-size: 24px;
+  }
+
+  .welcome-text {
+    flex-direction: row;
+  }
+
+  .welcome-text > *:last-child {
+    margin-left: 8px;
+  }
+
+  .card {
+    min-width: 25%;
+  }
+
+  .welcome-title__subtitle {
+    font-size: 40px;
+  }
+
+  .welcome-text__text::before {
+    height: 20px;
+    width: 20px;
+  }
+
+  .welcome-subtext {
+    font-size: 24px;
+  }
+
+  .welcome-button {
+    /* height: 150px; */
+  }
+
+  .welcome-button__btn {
+    padding: 15px 30px;
+    font-size: 20px;
+  }
 }
