--- a/css/collection.css
+++ b/css/collection.css
@@ -2,3 +2,4 @@
 @import url(collection-header-hero.css);
 @import url(common.header-address.partial.css);
 @import url(common.header-menu.partial.css);
+@import url(collection.section-wine-content.partial.css);
