do welcome block in abour page

--- a/css/about_us.css
+++ b/css/about_us.css
@@ -7,3 +7,4 @@
 @import url(about_us.section-our_team.css);
 @import url(about_us.section-our_winery.css);
 @import url(about_us.section-our_story.css);
+@import url(about_us.section-create_wines.partial.css);
