--- a/css/wineclub.css
+++ b/css/wineclub.css
@@ -3,3 +3,4 @@
 @import url(common.header-menu.partial.css);
 @import url(wineclub.get-your-membership-right-now.partial.css);
 @import url(wineclub.header.css);
+@import url(wineclub.membership-benefits.partial.css);
