--- a/css/about_us.section-our_team.css
+++ b/css/about_us.section-our_team.css
@@ -5,7 +5,7 @@
     color: #bc6e44;
 }
 .our_team{
-    background-image: url(/img/img_about_us_our_team/background.svg);
+    background-image: url(../img/img_about_us_our_team/background.svg);
     padding-top: 110px;
     padding-bottom: 90px;
     padding-left: 170px;
