--- a/css/about_us.section-our_winery.css
+++ b/css/about_us.section-our_winery.css
@@ -35,7 +35,7 @@
 }
 .winery-description__subtitle {
   font-family: "Cormorant Infant", serif;
-  color: rgb(42, 40, 36);
+  color: var(--description-text-color);
   font-size: 52px;
   font-weight: 500;
   line-height: 57.2px;
@@ -77,7 +77,7 @@
 }
 .winery-features__title {
   font-family: "Cormorant Infant", serif;
-  color: rgb(42, 40, 36);
+  color: var(--description-text-color);
   font-size: 24px;
   font-weight: 500;
   text-transform: capitalize;
