--- a/css/about_us.css
+++ b/css/about_us.css
@@ -1,4 +1,5 @@
 @import url(global.css);
+@import url(index.section-testimonials.partial.css);
 @import url(common.header-address.partial.css);
 @import url(common.header-menu.partial.css);
 @import url(about_us.header.css);
