Do modal window

--- a/css/index.css
+++ b/css/index.css
@@ -7,9 +7,10 @@
 @import url(index.section-testimonials.partial.css);
 @import url(index.section-blog.partial.css);
 @import url(index.section-come-visit-us.partial.css);
-@import url(contact_us.section-distribution.partial.html); 
+@import url(contact_us.section-distribution.partial.html);
 @import url(index.section-about-us.css);
 @import url(index.section-gourmand-choice.css);
 @import url(index.section-our-vineyards.partial.css);
 @import url(common.footer.partial.css);
 @import url(collection.css);
+@import url(index.modal-window.partial.css);
